# sovereign-browser

./: README.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adblock_manager.rs  devtools.rs  history.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/modules/: closed_tabs.rs  closed_tabs_store.rs  devtools.rs  mod.rs  navigation.rs  tabs.rs
src-tauri/src/modules/assets/: target.js
ui/: dropdown.html  find.html  index.html  settings.html  suggestion.html
