[package]
name = "sovereign-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sovereign_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
url = "2.5"
chrono = "0.4"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.4.2"
urlencoding = "2.1.3"

# Ad Blocking
# Note: We disable default-features to get Send+Sync on the Engine
# content-blocking enables conversion to Safari's WKContentRuleList format
adblock = { version = "0.12", default-features = false, features = ["embedded-domain-resolver", "content-blocking"] }
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
http = "1"
arc-swap = "1.7"
dashmap = "5.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[dev-dependencies]
rstest = "0.18"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
